10-devops-deployment/04-production-deployment/demo-canary-release/k8s/stable-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-stable
  namespace: canary-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: canary-app
      track: stable
  template:
    metadata:
      labels:
        app: canary-app
        track: stable
    spec:
      containers:
        - name: app
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
